# xdg-desktop-portal-wlr

./: .build.yml  .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  chooser-protocol.json  flake.nix  hyprland.portal  main.c  meson.build  meson_options.txt  org.freedesktop.impl.portal.desktop.hyprland.service.in  org.freedesktop.impl.portal.desktop.wlr.service.in  request.c  screenshot.c  session.c  wlr.portal  xdg-desktop-portal-wlr.5.scd
.builds/: alpine.yml  archlinux.yml  freebsd.yml
.github/workflows/: nix-build.yaml
contrib/: config.sample  dmenu-chooser-json.sh  wlroots-portals.conf
contrib/systemd/: xdg-desktop-portal-hyprland.service.in  xdg-desktop-portal-wlr.service.in
docs/: FAQ.md  development.md  screencast-compatibility.md
hyprland-share-picker/: CMakeLists.txt  Makefile  main.cpp  mainpicker.cpp  mainpicker.h  mainpicker.ui
include/: config.h  ext_image_copy.h  fps_limit.h  global_shortcuts.h  input_capture.h  input_capture_common.h  intset.h  keyboard.h  logger.h  pipewire_screencast.h  remotedesktop.h  remotedesktop_common.h  screencast.h  screencast_common.h  screenshot.h  screenshot_common.h  shm.h  shm_util.h  string_util.h  timespec_util.h  virtual_input.h  wlr_screencast.h  wlr_screencast_common.h  wlr_screencopy.h  wlr_virtual_pointer.h  xdpw.h  xdpw_gbm.h
nix/: default.nix  hyprland-share-picker.nix
protocols/: ext-screencopy-v1.xml  linux-dmabuf-unstable-v1.xml  meson.build  wlr-screencopy-unstable-v1.xml  xdg-output-unstable-v1.xml
src/core/: config.c  logger.c  main.c  request.c  session.c  shm_util.c  string_util.c  timer.c  timespec_util.c
src/globalshortcuts/: global_shortcuts.c
src/input_capture/: input_capture.c
src/remotedesktop/: intset.c  keyboard.c  remotedesktop.c  remotedesktop_common.c  shm.c  virtual_input.c  wlr_virtual_pointer.c
src/screencast/: chooser.c  ext_image_copy.c  fps_limit.c  pipewire_screencast.c  screencast.c  screencast_common.c  wlr_screencast.c  wlr_screencast_common.c  wlr_screencopy.c  xdpw_gbm.c
src/screenshot/: screenshot.c
tools/: trigger-screen-shot.py
